<resources>
    <string name="app_name">Calculator</string>
    <string name="del">DEL</string>
    <string name="x">x²</string>
    <string name="squareroot">√</string>
    <string name="division">/</string>
    <string name="multi">*</string>
    <string name="min">-</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="sum">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="equ">=</string>
    <string name="_0">0</string>
    <string name="dec">.</string>
    <string name="c">C</string>
    <string name="Calculator2">Calculator2</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="log">log</string>
    <string name="cos">cos</string>
    <string name="n_m">n^m</string>
    <string name="tan">tan</string>
    <string name="factorial">!</string>
    <string name="ln">ln</string>
    <string name="n_sqrt">n(sqrt)</string>
</resources>
